force-app/main/default/objects/Course_Preference_Qualification__c.object
<CustomObject>
    <description>Used to track the pre requisite information relating to an individual Application Course Preference. For example, where English is a requirement for course entry, this junction object serves as the fulfilment of that requirement by assigning a Qualification record to the ACP.</description>
    <fields>
        <fullName>Application_Course_Preference_Parent__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Used as the &quot;parent&quot; record when linking them together. Always populated on create</description>
        <inlineHelpText>Used as the &quot;parent&quot; record when linking them together. Always populated on create</inlineHelpText>
        <label>Application Course Preference Parent</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Course Preference Qualifications (Application Course Preference Parent)</relationshipLabel>
        <relationshipName>Assessed_Qualifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Lookup to the Application Course Preference object which should be associated with a Qualification for the purposes of pre requisite fulfilment</description>
        <inlineHelpText>Lookup to the Application Course Preference object which should be associated with a Qualification for the purposes of pre requisite fulfilment</inlineHelpText>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Course Preference Qualifications</relationshipLabel>
        <relationshipName>Course_Preference_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The Contact Qualification which is reflective of a record which meets the eligibility criteria of the Application Course Preference.</description>
        <inlineHelpText>The Contact Qualification which is reflective of a record which meets the eligibility criteria of the Application Course Preference.</inlineHelpText>
        <label>Contact Qualification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Contact_Qualification__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact_Qualification__c</referenceTo>
        <relationshipLabel>Course Preference Qualifications</relationshipLabel>
        <relationshipName>Course_Preference_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>A link to the applicant record</description>
        <inlineHelpText>A link to the applicant record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Preference Qualifications</relationshipLabel>
        <relationshipName>Course_Preference_Qualifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <description>Date in which the qualification was achieved</description>
        <formula>TEXT(Contact_Qualification__r.Date_Achieved__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date in which the qualification was achieved</inlineHelpText>
        <label>Date Achieved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monash_English_Module__c</fullName>
        <description>English Modules for Monash English Pathway</description>
        <label>Monash English Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Module 1</fullName>
                </value>
                <value>
                    <fullName>Module 2</fullName>
                </value>
                <value>
                    <fullName>Module 3</fullName>
                </value>
                <value>
                    <fullName>Module 4</fullName>
                </value>
                <value>
                    <fullName>Module 4 Advanced</fullName>
                </value>
                <value>
                    <fullName>Module 4 Advanced Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <formula>Contact_Qualification__r.Qualification_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>Used to differentiate between Education and English qualification.</description>
        <label>Qualification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Defines if the assigned Qualification/ACP to the assessed ACP meets selection criteria. This is integrated with Callista.</description>
        <inlineHelpText>Defines if the assigned Qualification/ACP to the assessed ACP meets selection criteria. This is integrated with Callista.</inlineHelpText>
        <label>Result</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>To be completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to define the link to the Qualification record</description>
        <inlineHelpText>Used to define the link to the Qualification record</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Qualification_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VCE English Equivalent</fullName>
                </value>
                <value>
                    <fullName>Monash English Pathway</fullName>
                </value>
                <value>
                    <fullName>Language of Instruction</fullName>
                </value>
                <value>
                    <fullName>English Test Results</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Valid and Verified Professional Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Verification status of the Contact Qualification</description>
        <formula>TEXT(Contact_Qualification__r.Verification_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Verification status of the Contact Qualification</inlineHelpText>
        <label>Verification Status</label>
        <type>Text</type>
    </fields>
    <label>Qualification Assesment</label>
    <nameField>
        <displayFormat>ACPQ-{000000}</displayFormat>
        <label>Qualification Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>